Version 1.9.13+svn:
 * Editor:
   * Fixed overpainting of transparent tile icons on the editor palettes on the
     sidebar
   * Fixed terrain palette shrinking to the size of small categories when
     switching maps (bug #19218)
   * Fixed various crashes related to drawing/filling operations (bug #18928)
 * Language and i18n:
   * Changed font used for CJK languages to DroidSans
   * Updated translations: British English, Chinese (Simplified), Czech, Dutch,
     Estonian, French, Galician, German, Hungarian, Latin, Norwegian, Serbian,
     Slovak, Spanish
 * WML engine:
   * Fix store_unit clearing the used variable before its filter can reference it
     (bug #19203)
   * Check for argument image file existence before creating a MASK or
     BLIT image mod (bug #19208)
   * New key [object]delayed_variable_substitution=yes|no (default no)
     as a workaround for bug #18893 (fixes bug #19225)
   * Made empty {} preprocessor directives be handled more gracefully
     (bug #19233)
   * Fixed bug #19213: [harm_unit] incorrectly uses ToD bonus
 * Miscellaneous and bug fixes:
   * Fixed bug #19032: Poison and level up AI defense placement calculation
   * Fixed bug #19245: wesnoth(6) man page doesn't describe the --campaign*
     options correctly
   * Enable local ToD lighting option by default.

Version 1.9.13:
 * Campaigns:
   * Northern Rebirth:
     * Infested Caves: integrated sighted events with moveto events
     * To the Mines: fixed Hamel not having the hero overlay
     * Clearing the Mines: fixed Dwarves recruitment not being disallowed upon
       winning
     * The Pursuit: integrated a sighted event with moveto event
     * The Pursuit: replaced another sighted event with ON_SIGHTING
     * Elvish Princess: fixed Ro'Arthian and Ro'Sothian not having the hero
       overlay
     * Introductions: used ON_SIGHTING instead of sighted event
     * Stolen Gold: gave Krash the expendable leader overlay