@@ -3,6 +3,9 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.9.13+svn:
+ * AI:
+   * Fixed bug #18962 and bug #19214: AI leaders are no longer slow to select
+     attacks.
  * Language and i18n:
    * Changed font used for CJK languages to DroidSans.
    * Updated translations: British English, Chinese (Simplified), Czech, Dutch,
