@@ -1,4 +1,7 @@
 Version 1.9.13+svn:
+ * AI:
+   * Fixed bug #18962 and bug #19214: AI leaders are no longer slow to select
+     attacks.
  * Editor:
    * Fixed overpainting of transparent tile icons on the editor palettes on the
      sidebar
